adding images and additional files

--- a/Challenge/Module-17-Challenge-Resources/credit_risk_ensemble.ipynb
+++ b/Challenge/Module-17-Challenge-Resources/credit_risk_ensemble.ipynb
@@ -705,6 +705,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### DELIVERABLE 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Ensemble Learners\n",
     "\n",
     "In this section, you will compare two ensemble algorithms to determine which algorithm results in the best performance. You will train a Balanced Random Forest Classifier and an Easy Ensemble AdaBoost classifier . For each algorithm, be sure to complete the folliowing steps:\n",
