--- a/Challenge/Module-17-Challenge-Resources/credit_risk_resampling.ipynb
+++ b/Challenge/Module-17-Challenge-Resources/credit_risk_resampling.ipynb
@@ -729,6 +729,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### DELIVERABLE 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Naive Random Oversampling"
    ]
   },
@@ -751,7 +758,7 @@
    "source": [
     "# Resample the training data with the RandomOversampler\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
-    "ros = RandomOverSampler(random_state=1)\n",
+    "ros = RandomOverSampler(random_state=1, sampling_strategy='auto')\n",
     "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
     "\n",
     "Counter(y_resampled)"
@@ -993,46 +1000,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'high_risk': 246, 'low_risk': 246})"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "### ClusterCentroids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
     "from imblearn.under_sampling import ClusterCentroids\n",
-    "cc = ClusterCentroids(random_state=1)\n",
+    "cc = ClusterCentroids(random_state = 1, sampling_strategy = 'auto', voting = 'soft')\n",
     "X_resampled, y_resampled = cc.fit_resample(X_train, y_train)\n",
     "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(random_state=1)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -1042,20 +1034,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6537310478007576"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculated the balanced accuracy score\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
@@ -1064,21 +1045,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   70,    31],\n",
-       "       [10325,  6779]], dtype=int64)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -1088,23 +1057,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   pre       rec       spe        f1       geo       iba       sup\n",
-      "\n",
-      "  high_risk       0.01      0.69      0.40      0.01      0.52      0.28       101\n",
-      "   low_risk       1.00      0.40      0.69      0.57      0.52      0.27     17104\n",
-      "\n",
-      "avg / total       0.99      0.40      0.69      0.56      0.52      0.27     17205\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print the imbalanced classification report\n",
     "from imblearn.metrics import classification_report_imbalanced\n",
@@ -1129,47 +1084,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'high_risk': 68460, 'low_risk': 62011})"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "### DELIVERABLE 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SMOTEENN Sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
     "from imblearn.combine import SMOTEENN\n",
     "\n",
-    "smote_enn = SMOTEENN(random_state=0)\n",
+    "smote_enn = SMOTEENN(random_state= 1, sampling_strategy='auto')\n",
     "X_resampled, y_resampled = smote_enn.fit_resample(X, y)\n",
     "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(random_state=1)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -1179,21 +1126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  73,   28],\n",
-       "       [7409, 9695]], dtype=int64)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -1204,20 +1139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6447993752836463"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculated the balanced accuracy score\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
@@ -1227,23 +1151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   pre       rec       spe        f1       geo       iba       sup\n",
-      "\n",
-      "  high_risk       0.01      0.72      0.57      0.02      0.64      0.42       101\n",
-      "   low_risk       1.00      0.57      0.72      0.72      0.64      0.40     17104\n",
-      "\n",
-      "avg / total       0.99      0.57      0.72      0.72      0.64      0.40     17205\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print the imbalanced classification report\n",
     "from imblearn.metrics import classification_report_imbalanced\n",
@@ -1253,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
