--- a/Challenge/Module-17-Challenge-Resources/credit_risk_resampling.ipynb
+++ b/Challenge/Module-17-Challenge-Resources/credit_risk_resampling.ipynb
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
        "Counter({'low_risk': 51366, 'high_risk': 51366})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
    "source": [
     "# Resample the training data with the RandomOversampler\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
-    "ros = RandomOverSampler(random_state=1, sampling_strategy='auto')\n",
+    "ros = RandomOverSampler(random_state=1)\n",
     "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
     "\n",
     "Counter(y_resampled)"
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "       [7216, 9888]], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "0.6603423204808787"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,23 +1008,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'high_risk': 246, 'low_risk': 246})"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
     "from imblearn.under_sampling import ClusterCentroids\n",
-    "cc = ClusterCentroids(random_state = 1, sampling_strategy = 'auto', voting = 'soft')\n",
+    "cc = ClusterCentroids(random_state = 1, sampling_strategy='auto', estimator=None, voting='auto' )\n",
     "X_resampled, y_resampled = cc.fit_resample(X_train, y_train)\n",
     "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -1034,9 +1056,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5447046721744204"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculated the balanced accuracy score\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
@@ -1045,9 +1078,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   70,    31],\n",
+       "       [10347,  6757]], dtype=int64)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -1057,9 +1102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.01      0.69      0.40      0.01      0.52      0.28       101\n",
+      "   low_risk       1.00      0.40      0.69      0.57      0.52      0.27     17104\n",
+      "\n",
+      "avg / total       0.99      0.40      0.69      0.56      0.52      0.27     17205\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
     "from imblearn.metrics import classification_report_imbalanced\n",
