--- a/Module-17-Challenge-Resources/credit_risk_resampling.ipynb
+++ b/Module-17-Challenge-Resources/credit_risk_resampling.ipynb
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
        "Counter({'low_risk': 51366, 'high_risk': 51366})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
    "source": [
     "# Resample the training data with the RandomOversampler\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
-    "ros = RandomOverSampler(random_state=1, sampling_strategy='auto')\n",
+    "ros = RandomOverSampler(random_state=1)\n",
     "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
     "\n",
     "Counter(y_resampled)"
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "       [7216, 9888]], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "0.6603423204808787"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
        "Counter({'high_risk': 246, 'low_risk': 246})"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,14 +1026,14 @@
     "# Resample the data using the ClusterCentroids resampler\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
     "from imblearn.under_sampling import ClusterCentroids\n",
-    "cc = ClusterCentroids(random_state = 1, sampling_strategy = 'auto', voting = 'soft')\n",
+    "cc = ClusterCentroids(random_state = 1, sampling_strategy='auto', estimator=None, voting='auto' )\n",
     "X_resampled, y_resampled = cc.fit_resample(X_train, y_train)\n",
     "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,16 +1056,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6808065277996462"
+       "0.5447046721744204"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,17 +1078,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[   70,    31],\n",
-       "       [10324,  6780]], dtype=int64)"
+       "       [10347,  6757]], dtype=int64)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
